@@ -1,3 +1,7 @@
+Fri Nov 27 2015
+1. Changes
+   * Allow specification of default gamma prior parameters
+
 Thu Nov 12 2015
 1. Bug fixing
    * Corrected the prior covariance matrix in the MCMCGuide06 demo
